fixed alignment issue with the menu button

--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -3,5 +3,9 @@
 // or
 // $blue: #141bff
 
+.mySpecialClass {
+	display: inline;
+}
+
 // this line goes last
 @import "../../node_modules/bulma/bulma.sass"
